# SecurePipeline

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: build.yml  consolidate.yml  iac.yml  linter.yml  secrets-scan.yml  security.yml  test.yml  zap.yml
.zap/: rules.tsv
app/: main.py
infra/terraform/: .checkov.yaml  .terraform.lock.hcl  .trivyignore  main.tf  outputs.tf  variables.tf
k8s/app/: deployment.yaml
k8s/argocd/: application.yaml  project.yaml  signing-keys.yaml  values.yaml
k8s/eso/: values.yaml
k8s/falco/: values.yaml
k8s/falco/rules/: securepipe.yaml
k8s/monitoring/: kube-prometheus-values.yaml  loki-values.yaml  promtail-values.yaml
k8s/monitoring/dashboards/: securepipeline-overview.json
k8s/network-policies/: allow-dns.yaml  app-to-vault.yaml  argocd-to-api.yaml  default-deny.yaml  eso-to-vault.yaml  falco-allow-prometheus-scrape.yaml  loki-ingress.yaml  prometheus-scrape.yaml  promtail-egress.yaml  vault-ingress.yaml
k8s/policies/: require-signed-images.yaml
k8s/secrets/: app-external-secret.yaml  cluster-secret-store.yaml
k8s/vault/: bootstrap.sh  values-ha.yaml  values.yaml
tests/: health_check_test.py  sarif_parser_test.py  security_headers_test.py
tests/fixtures/: sample_checkov.sarif  sample_gitleaks.sarif  sample_semgrep.sarif  sample_trivy.sarif  sample_zap.sarif
tools/unified_sarif/: cli.py  parser.py  render.py  schema.py
(+4 files in other folders)
